--- a/react-native/package.json
+++ b/react-native/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-crypto": "^2.2.0",
+    "react-native-dropdown-picker": "^5.4.4",
     "react-native-level-fs": "^3.0.1",
     "react-native-os": "^1.2.6",
     "react-native-randombytes": "^3.6.1",
